# schemagic

./: .gitignore  CLAUDE.md  REDESIGN.md  requirements.txt  test_bank.py
.github/workflows/: build.yml
engine/core/: config.py  models.py  pipeline.py  project_detector.py  user_config.py
engine/datasheet/: ai_extractor.py  fetcher.py  package_identifier.py  parser.py  pin_extractor.py
engine/generation/: footprint_modifier.py  library_manager.py  sexpr.py  symbol_modifier.py
engine/matching/: footprint_matcher.py  library_index.py  symbol_matcher.py
engine/rendering/: kicad_lib_parser.py  kicad_render_data.py
engine/tests/: conftest.py  test_ai_extraction.py  test_airtable_harness.py  test_edge_cases.py  test_harness.py  test_parts.json
plugin/: app.py  build_dmg.py  dmg_background.py  icon.icns  setup_app.py
plugin/ui/: footprint_panel.py  kicad_lib_parser.py  main_dialog.py  pin_edit_bar.py  pin_review_dialog.py  symbol_panel.py
scripts/: build-and-install.sh  build-sidecar-macos.sh  build-sidecar-windows.ps1
server/: Dockerfile  job_store.py  license.py  main.py  schemas.py
server/routes/: files.py  kicad_project.py  library.py  pipeline.py
tauri/: Cargo.toml  entitlements.plist  tauri.conf.json
tauri/capabilities/: default.json
tauri/icons/: icon.icns
tauri/sidecar/: schemagic-server.spec
tauri/src/: main.rs  sidecar.rs
tests/stripe/: .gitignore  README.md  cleanup.py  conftest.py  phase10_abuse.py  phase11_smoke.py  phase12_war_stories.py  phase1_identity.py  pytest.ini  (+9 more)
web/: next.config.ts  package-lock.json  package.json  proxy.ts
(+69 files in other folders)
